Change task saving to rewrite save file after each task update